Test steps: add allure maven plugin